--- a/styles/base64.css
+++ b/styles/base64.css
@@ -17,8 +17,8 @@
 
 .tool-btn {
 	padding: var(--space-2) var(--space-4);
-	background-color: var(--black);
-	color: var(--light);
+	background-color: var(--light);
+	color: var(--black);
 	border: var(--border-sm) solid var(--gray);
 	cursor: pointer;
 	font-size: var(--font-sm);
@@ -26,7 +26,7 @@
 }
 
 .tool-btn:hover {
-	background-color: var(--gray);
+	background-color: var(--white);
 }
 
 .editors {
