--- a/styles/symbols.css
+++ b/styles/symbols.css
@@ -13,7 +13,8 @@
 
 .category-btn {
 	padding: var(--space-2) var(--space-4);
-	color: var(--light);
+	background-color: var(--light);
+	color: var(--black);
 	border: none;
 	cursor: pointer;
 	font-size: var(--font-md);
@@ -21,7 +22,7 @@
 }
 
 .category-btn:hover {
-	background-color: var(--gray);
+	background-color: var(--white);
 }
 
 .category-btn:focus {
@@ -31,6 +32,7 @@
 
 .category-btn.active {
 	background-color: var(--gray);
+	color: var(--white);
 }
 
 .symbols-grid {
