--- a/styles/tools.css
+++ b/styles/tools.css
@@ -132,7 +132,8 @@ textarea {
 .btn {
 	display: inline-block;
 	padding: var(--space-4) var(--space-6);
-	color: var(--light);
+	background-color: var(--light);
+	color: var(--black);
 	border: none;
 	cursor: pointer;
 	font-size: var(--font-md);
@@ -142,7 +143,7 @@ textarea {
 }
 
 .btn:hover {
-	background-color: var(--gray);
+	background-color: var(--white);
 }
 
 .btn:focus {
@@ -151,11 +152,14 @@ textarea {
 }
 
 .btn-secondary {
-	background-color: var(--black);
-	border: var(--border-sm) solid var(--dark);
+	background-color: var(--dark);
+	color: var(--light);
+	border: var(--border-sm) solid var(--gray);
 }
 
 .btn-secondary:hover {
+	background-color: var(--gray);
+	color: var(--white);
 }
 
 .btn-group {
